--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -23,5 +23,5 @@ jobs:
           git config user.email "github-actions@github.com"
           mvn --batch-mode -s github-maven-settings.xml release:prepare release:perform
         env:
-          GITHUB_TOKEN: ${{ github.token }}
-          GITHUB_RELEASE_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.NOTIFY_REPOS_PAT }}
+
