Quote the echoed output
Otherwise, the line-breaks in the JSON make it fail.

--- a/.github/workflows/on-package-release.yml
+++ b/.github/workflows/on-package-release.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - name: Print trigger event data
         run: |
-          echo ${{ toJSON(github.event.registry_package) }}
+          echo "${{ toJSON(github.event.registry_package) }}"
 
 
