Use double star for globbing the triggering git tag

--- a/.github/workflows/notify-external-repos-on-release.yml
+++ b/.github/workflows/notify-external-repos-on-release.yml
@@ -2,7 +2,7 @@ name: Notify external repositories about a new release
 on:
   push:
     tags:
-      - genopace-test-artefact-*
+      - genopace-test-artefact-**
 
 jobs:
   notify-dependants:
