More helpless guessing, why the on.push.tags does not trigger

--- a/.github/workflows/notify-external-repos-on-release.yml
+++ b/.github/workflows/notify-external-repos-on-release.yml
@@ -1,8 +1,8 @@
-name: Notify external repositories about a new release
+name: Notify other repos
 on:
   push:
     tags:
-      - genopace-test-artefact-*
+      - g*
 
 jobs:
   hello-world:
