--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Get release version
         id: get-release-version
         run: |
-          ARTIFACT_ID=$(mvn help:evaluate -Dexpression=project.artifactId -q -DforceStdout
-          ARTIFACT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout
+          ARTIFACT_ID=$(mvn help:evaluate -Dexpression=project.artifactId -q -DforceStdout)
+          ARTIFACT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
           echo "RELEASE_VERSION=${ARTIFACT_ID}-${ARTIFACT_VERSION}" >> "$GITHUB_OUTPUT"
       - name: Perform Maven Release
         run: |
