--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>genopace-test-artefact</artifactId>
     <!-- Mergekonflikt Trennzeile -->
 
-    <version>16</version>
+    <version>17-SNAPSHOT</version>
 
     <properties>
         <project.scm.id>github-hypoport</project.scm.id>
@@ -16,7 +16,7 @@
     <scm>
         <connection>scm:git:https://github.com/genopace/test-maven-release-source.git</connection>
         <developerConnection>scm:git:https://github.com/genopace/test-maven-release-source.git</developerConnection>
-        <tag>genopace-test-artefact-16</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
