Use PAT for GitHub release
to see, if it triggers another workflow (which the automatic token
will not).

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -45,5 +45,5 @@ jobs:
       - name: Create a GitHub release
         run: gh release create ${{ needs.maven-release.outputs.release-version }} --verify-tag --generate-notes
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.NOTIFY_REPOS_PAT }}
 
