--- a/.github/workflows/notify-external-repos-on-release.yml
+++ b/.github/workflows/notify-external-repos-on-release.yml
@@ -7,10 +7,10 @@ permissions:
   contents: read
 
 jobs:
-  hello-world:
+  echo-release-tag:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello ${{ github.ref_name }}!"
+      - run: echo "Release tag is '${{ github.event.release.tag_name }}'"
   notify-dependants:
     runs-on: ubuntu-latest
     strategy:
@@ -19,7 +19,7 @@ jobs:
     steps:
       - name: Get version from tag
         run: |
-          TAG_NAME=${{ github.ref_name }}
+          TAG_NAME=${{ github.event.release.tag_name }}
           RELEASE_VERSION=${TAG_NAME#genopace-test-artefact-}
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
       - name: Notify dependant repos of new API release
