Do not persist credentials during checkout
GH customer support suspects that the maven release tagging does
not use the provided PAT but the workflow token persisted by
the checkout action.

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -10,6 +10,8 @@ jobs:
       release-version: ${{ steps.get-release-version.outputs.RELEASE_VERSION }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
